# Quantitative-Trading-System

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: strategy_portfolio.yaml  strategy_portfolio_calibrated.yaml  system.yaml  universe_filtered_sample.csv  universe_sample.csv  universe_smoke.csv
data/: sample_dragon_next_open_ohlcv.csv  sample_dragon_ohlcv.csv  sample_ohlcv.csv  sample_sector_ohlcv.csv
docs/: backtest_reliability.md  book_landing_summary.md  book_rule_mapping.md  dragon_leader.md  review_attribution.md  route_completion_audit.md  steady_reversal_sharpe_strategy.md  strategy_portfolio_calibration_result.md  strategy_portfolio_manager.md  strategy_risk_hardening.md  trading_day_workflow.md
reports/: briefing.md  daily.md  dragon_briefing.md  dragon_gap_experiments.json  dragon_gap_experiments.md  dragon_next_open_validation.md  dragon_validation.md  experiments.json  experiments.md  real_briefing.md  sector_briefing.md  weekly.md
tests/: test_action_advice_report.py  test_action_execution.py  test_approval_cooldown.py  test_approval_execution.py  test_attribution_policy.py  test_attribution_policy_effect.py  test_backtest.py  test_backtest_reliability.py  test_book_rule_mapping.py  test_briefing_report.py  test_cli_approval_cooldown.py  test_cli_assistant.py  test_cli_backtest_reliability.py  test_cli_battle_plan.py  test_cli_cockpit.py  test_cli_dragon.py  test_cli_dragon_prefilter.py  test_cli_dragon_report.py  test_cli_execution_audit.py  test_cli_execution_confirm.py  test_cli_market.py  test_cli_optimize.py  test_cli_premarket.py  (+96 more)
(+132 files in other folders)
